[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/game_theme.tres" type="Theme" id=1]
[ext_resource path="res://entities/menus/Pause.gd" type="Script" id=2]

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.45098 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.121569, 0.596078, 0.882353, 0.572549 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -75.0
margin_right = 75.0
margin_bottom = 35.0
theme = ExtResource( 1 )
text = "PAUSED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -202.0
margin_top = -39.0
margin_right = 206.0
margin_bottom = 69.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
margin_right = 408.0
margin_bottom = 41.0
focus_neighbour_top = NodePath("../HBoxContainer2/SoundSlider")
focus_neighbour_bottom = NodePath("../RestartButton")
theme = ExtResource( 1 )
text = "Continue"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 408.0
margin_bottom = 86.0
focus_neighbour_top = NodePath("../ContinueButton")
focus_neighbour_bottom = NodePath("../HBoxContainer/MusicSlider")
theme = ExtResource( 1 )
text = "Restart"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 408.0
margin_bottom = 125.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 117.0
margin_bottom = 35.0
theme = ExtResource( 1 )
text = "Music"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
margin_left = 121.0
margin_right = 408.0
margin_bottom = 16.0
focus_neighbour_top = NodePath(".")
focus_neighbour_bottom = NodePath("../../HBoxContainer2/SoundSlider")
size_flags_horizontal = 3
theme = ExtResource( 1 )
min_value = -40.0
max_value = 0.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 129.0
margin_right = 408.0
margin_bottom = 164.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 125.0
margin_bottom = 35.0
theme = ExtResource( 1 )
text = "Sound"

[node name="SoundSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
margin_left = 129.0
margin_right = 408.0
margin_bottom = 16.0
focus_neighbour_top = NodePath("../../HBoxContainer/MusicSlider")
focus_neighbour_bottom = NodePath("../../ContinueButton")
size_flags_horizontal = 3
theme = ExtResource( 1 )
min_value = -40.0
max_value = 0.0

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
